--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#select-zone{
+    margin-bottom:30px;
+}
 .container-img{
     border: 1px solid black;
     width: 100px;
@@ -15,4 +24,13 @@
 .calculate-button{
     width: 100%;
     padding: 10px;
+    margin-top:20px;
+}
+
+.info{
+    font-size:24px;
+}
+
+.calculate-desc{
+    text-align: center;
 }
