--- a/style.css
+++ b/style.css
@@ -27,8 +27,23 @@ body{
     margin-top:20px;
 }
 
-.info{
-    font-size:24px;
+@media screen and (min-width: 360px) {
+    body{
+        font-size: 14px;
+    }
+    .info {
+        font-size: 12px;
+    }
+
+    h1{
+        font-size: 16px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .info {
+        font-size: 20px;
+    }
 }
 
 .calculate-desc{
