--- a/style.css
+++ b/style.css
@@ -15,10 +15,13 @@ body{
     border: 1px solid black;
     width: 100px;
     height: 100px;
+    transition: all .3s;
 }
 
 .container-img:hover{
     filter: brightness(80%);
+    transform: scale(1.15);
+    transition: all .5s;
 }
 
 .container-img:active{
@@ -29,10 +32,24 @@ body{
     margin-top: 10px;
 }
 
+#calculating-zone{
+    background-color: rgba(255, 255, 255, 0.419);
+    padding: 15px;
+}
+
 .calculate-button{
     width: 100%;
     padding: 10px;
     margin-top:20px;
+    border: none;
+    background-color: aquamarine;
+    transform: all .3s;
+}
+
+.calculate-button:hover{
+    background-color: rgb(136, 213, 187);
+    transform: scale(1.15);
+    transition: all .5s;
 }
 
 @media screen and (min-width: 360px) {
