--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: 'NemoThin';
-    src: url(NemoThin.ttf) format(ttf);
-}
-
 body{
     display:flex;
     flex-direction: column;
@@ -11,7 +6,7 @@ body{
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    font-family:'NemoThin';
+    font-family:'Itim';
 
 }
 
@@ -71,29 +66,29 @@ body{
         text-align: center;
     }
     .info {
-        font-size: 25px;
+        font-size: 20px;
     }
     h1{
-        font-size: 40px;
+        font-size: 30px;
         color: rgb(255, 133, 133);
         -webkit-text-stroke: 0.1px rgb(180, 53, 53);
     }
 
     #alert-zone{
-        font-size: 30px;
+        font-size: 25px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     body{
-        font-size: 22px;
+        font-size: 20px;
         text-align: center;
     }
     .info {
-        font-size: 25px;
+        font-size: 20px;
     }
     h1{
-        font-size: 50px;
+        font-size: 40px;
         color: rgb(255, 133, 133);
         -webkit-text-stroke: 0.1px rgb(180, 53, 53);
     }
