--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     background-position: center;
     background-attachment: fixed;
     font-family:'Itim';
+    src: url(https://fonts.googleapis.com/css?family=Itim);
 
 }
 
