--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'Itim';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://fonts.gstatic.com/s/itim/v14/0nknC9ziJOYe8BdAkP7Z.woff2) format('woff2');
+    unicode-range: U+0E01-0E5B, U+200C-200D, U+25CC;
+}
+
 body{
     display:flex;
     flex-direction: column;
@@ -7,8 +15,6 @@ body{
     background-position: center;
     background-attachment: fixed;
     font-family:'Itim';
-    src: url(https://fonts.googleapis.com/css?family=Itim);
-
 }
 
 #select-zone{
