--- a/style.css
+++ b/style.css
@@ -59,6 +59,28 @@ body{
     transition: all .5s;
 }
 
+.back-button{
+    position: fixed;
+    top: 0px;
+    left: 10px;
+    opacity: 50%;
+    width: fit-content;
+    padding: 10px;
+    margin-top:20px;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
+    font-size: 20px;
+    font-family:'Itim';
+    transform: all .3s;
+}
+.back-button:hover{
+    background-color: dimgray;
+    transform: scale(1.15);
+    transition: all .5s;
+}
+
 .calculate-button{
     width: 100%;
     padding: 10px;
@@ -79,11 +101,11 @@ body{
 
 @media screen and (min-width: 360px) {
     body{
-        font-size: 17px;
+        font-size: 16px;
         text-align: center;
     }
     .info {
-        font-size: 20px;
+        font-size: 16px;
     }
     h1{
         font-size: 30px;
