--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     margin-bottom:0px;
 }
 .container-img{
-    border: 1px solid black;
+    border: 3px solid rgb(255, 133, 133);;
     border-radius: 10px;
     transition: all .3s;
 }
@@ -157,12 +157,12 @@ h1{
         height: 150px;
     }
     body{
-        font-size: 16px;
+        font-size: 18px;
         text-align: center;
     }
     .info {
         width: 330px;
-        font-size: 16px;
+        font-size: 18px;
     }
     h1{
         font-size: 30px;
@@ -171,7 +171,7 @@ h1{
         font-size: 20px;
     }
     .thebutton{
-        font-size: 16px;
+        font-size: 18px;
     }
 
     #knowledge{
@@ -199,7 +199,7 @@ h1{
         font-size: 20px;
     }
     .knowledge-button{
-        font-size: 16px;
+        font-size: 18px;
         
     }
     .index{
