--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body{
     font-family:'Niramit';
 }
 
+.text-box{
+    background-color: rgba(255, 255, 255, 0.544);
+    padding: 15px;
+    border-radius: 10px;
+}
 
 #select-zone{
     margin-bottom:0px;
@@ -174,7 +179,7 @@ h1{
         font-size: 15px;
     }
     .info {
-        width: 330px;
+        width: 360px;
         font-size: 22px;
     }
     h1{
@@ -246,7 +251,7 @@ h1{
     }
 
     .info {
-        width: 500px;
+        width: 510px;
         font-size: 20px;
     }
     h1{
