--- a/style.css
+++ b/style.css
@@ -125,6 +125,13 @@ body{
     transition: all .5s;
 }
 
+#logo-image{
+    justify-items: center;
+    border-radius: 10px;
+    width: 360px;
+    margin-top: 20px;
+}
+
 .calculate-button{
     width: fit-content;
     padding: 10px;
